...
            android:textColor="@color/color_text_secondary"
            android:textSize="13sp"
            android:text="Location" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancelTicket"
        style="@style/ButtonStyle.Danger"
        android:layout_height="44dp"
        android:text="Cancel Reservation"
        android:textSize="14sp" />

</LinearLayout>
...
