...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="$0" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBook"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_accent_btn"
                android:text="Book"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
...
